# browser-web3-signer

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  ARCHITECTURE.md  Cargo.toml  README.md  clippy.toml  justfile
.github/workflows/: ci.yml  release.yml
crates/browser-web3-signer/: Cargo.toml
crates/browser-web3-signer-core/: Cargo.toml
crates/browser-web3-signer-core/src/: browser.rs  bytes.rs  config.rs  engine.rs  errors.rs  http.rs  lib.rs  pending_store.rs  shared.rs  types.rs
crates/browser-web3-signer-core/tests/: http_roundtrip.rs
crates/browser-web3-signer-core/web/: app-core.js
crates/browser-web3-signer-evm/: Cargo.toml
crates/browser-web3-signer-evm/src/: config.rs  domain.rs  lib.rs  signer.rs  types.rs
crates/browser-web3-signer-evm/web/: evm.html
crates/browser-web3-signer-tron/: Cargo.toml
crates/browser-web3-signer-tron/src/: config.rs  domain.rs  lib.rs  signer.rs  types.rs
crates/browser-web3-signer-tron/web/: tron.html
crates/browser-web3-signer/src/: evm.rs  flow.rs  main.rs  output.rs  serve.rs  tron.rs
docs/: manual-testing.md  wallet-account-change.md
go/: README.md  client.go  client_test.go  doc.go  domain.go  domain_test.go  evm.go  go.mod  go.sum  serve.go  tron.go
scripts/: manual-test-evm.sh  manual-test-tron.sh  npm-platform.mjs  release.sh  rpc-log-proxy.mjs
scripts/tron/: inject-chainid.js  package-lock.json  package.json  tron-tool.ts
tests/e2e-browser/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  record-demo.mts
tests/e2e-browser/demo-ambire/: .gitignore  README.md  bake.mts  config.mts  drive.mts  lib.mts  record.mts  render.mts  setup.sh
tests/e2e-browser/demo-ambire/remotion/: package-lock.json  package.json
tests/e2e-browser/demo-ambire/remotion/src/: Demo.tsx  Root.tsx  timeline.ts
tests/e2e-browser/evm/: wallet-flow.spec.ts
tests/e2e-browser/evm/fixtures/: mock-wallet.mts  test-server.mts
tests/e2e-browser/fixtures/: harness.mts  test-server.mts
tests/e2e-browser/tron/: wallet-flow.spec.ts
tests/e2e-browser/tron/fixtures/: mock-wallet.mts  test-server.mts
ts/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ts/src/: client.ts  index.ts  platform.ts  serve-process.ts  transport.ts  viem-account.ts
ts/test/: client.test.ts  deno_smoke_test.ts  fake-wallet.mjs  platform.test.ts  wallet-signer.test.ts
web/: app-core.js  evm.html  tron.html
