[workspace]
resolver = "2"
members = [
    "crates/browser-web3-signer-core",
    "crates/browser-web3-signer-evm",
    "crates/browser-web3-signer-tron",
    "crates/browser-web3-signer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
browser-web3-signer-core = { path = "crates/browser-web3-signer-core" }
browser-web3-signer-evm = { path = "crates/browser-web3-signer-evm" }
browser-web3-signer-tron = { path = "crates/browser-web3-signer-tron" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "process"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
