[package]
name = "browser-web3-signer-tron"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "TRON browser wallet signer: connect / send-TRX / trigger-contract / deploy-contract / sign-message / sign-typed-data via TronLink."

[dependencies]
browser-web3-signer-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
alloy-primitives = "1"
bs58 = { version = "0.5", features = ["check"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
